Fix CORS - read origins from properties